fix of jumping table

--- a/src/pages/Pairs/pairs.css
+++ b/src/pages/Pairs/pairs.css
@@ -5,6 +5,3 @@
   margin-top: 20px;
 }
 
-.pairs-clickcell {
-  cursor: pointer;
-}
